--- a/style.css
+++ b/style.css
@@ -1,19 +1,3 @@
-/* body {
-  margin: 0;
-  padding: 0;
-}
-
-#map {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 50%;
-}
-
-#search {
-  position: fixed;
-}
- */
 body {
   margin: 0;
   padding: 0;
@@ -23,19 +7,52 @@ body {
   position: absolute;
   top: 0;
   bottom: 0;
-  width: 90%; /* Ajusta el ancho según tus necesidades */
+  width: 90%;
 }
 
 #search {
   position: fixed;
   top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
   padding: 10px;
-  background-color: rgba(238, 130, 238, 0.5);
-  border: 1px solid #ccc;
+  background-color: transparent;
   border-radius: 5px;
   display: flex;
+  align-items: center;
 }
 
-.mapboxgl-popup {
-  max-width: 200px;
+#pointA,
+#pointB {
+  margin-right: 10px;
+}
+
+label {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+#pointA input,
+#pointB input,
+#categories,
+button {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-right: 5px;
+  width: 150px;
+}
+
+#categories {
+  flex-shrink: 0;
+}
+
+button {
+  background-color: #4caf50;
+  color: white;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #45a049;
 }
